--- a/readme
+++ b/readme
@@ -1,1 +1,8 @@
 Playground for some Math  stuff of mine.
+
+Currently testing out:
+
+- Artificial Intelligence
+- Python in general
+- Java
+- Calculating my Math homework using Python (and soon Ai)
